<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    tools:context=".authEmail.ForgotPassword"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="60sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/description"
            android:layout_width="256dp"
            android:layout_height="61dp"
            android:layout_below="@+id/title"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/to_reset_your_password_enter_the_registered_email_a_link_will_be_sent_on_this_email_to_reset_your_password"
            android:textColor="#fff"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/img_username"
            android:background="#0000"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textVisiblePassword"
            android:textColor="#000000"
            android:textColorHint="@color/LightColor"
            android:textSize="24sp"
            tools:ignore="Autofill,RtlHardcoded" />


        <ImageView
            android:id="@+id/img_username"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentdescription"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_mail_bt"
            app:tint="#000000" />
    </RelativeLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="232dp"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_btn_round"
        android:drawableRight="@drawable/ic_next"
        android:fontFamily="@font/poppins_bold"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:stateListAnimator="@null"
        android:text="@string/send_email"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout11"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="RtlHardcoded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="198dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textColor="@color/LightColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textColor="@color/LightColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>